add accounts integration spec
